@@ -7,16 +7,15 @@
  */
 package io.lighty.yang.validator.formats;
 
-import static io.lighty.yang.validator.Main.runLYV;
+import static io.lighty.yang.validator.Main.startLyv;
 
 import com.google.common.collect.ImmutableList;
 import io.lighty.yang.validator.FormatTest;
+import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
-import org.apache.commons.io.FileUtils;
 import org.testng.Assert;
 import org.testng.annotations.Test;
 
@@ -26,52 +25,61 @@ public class TreeTest extends FormatTest {
     public void setFormat() {
         final List<FormatPlugin> formats = new ArrayList<>();
         formats.add(new Tree());
-        this.formatter = new Format(formats);
-        this.builder.setFormat("tree");
-        this.builder.setTreeConfiguration(0, 0, false, false, false);
+        formatter = new Format(formats);
+        builder.setFormat("tree");
+        builder.setTreeConfiguration(0, 0, false, false, false);
     }
 
     @Test
     public void treePrefixMainModuleTest() throws Exception {
         setFormat();
-        this.builder.setTreeConfiguration(0, 0, false, false, true);
-        final String module = Paths.get(this.yangPath).resolve("ietf-ip@2018-02-22.yang").toString();
-        runLYV(ImmutableList.of(module), this.builder.build(), this.formatter);
+        builder.setTreeConfiguration(0, 0, false, false, true);
+        final String module = Paths.get(yangPath).resolve("ietf-ip@2018-02-22.yang").toString();
+        builder.setYangModules(ImmutableList.of(module));
+        final var configuration = builder.build();
+        startLyv(configuration, formatter);
         runTreeTest("ip-prefix-main-module.tree");
     }
 
     @Test
     public void treePrefixModuleTest() throws Exception {
         setFormat();
-        this.builder.setTreeConfiguration(0, 0, false, true, false);
-        final String module = Paths.get(this.yangPath).resolve("ietf-interfaces@2018-02-20.yang").toString();
-        runLYV(ImmutableList.of(module), this.builder.build(), this.formatter);
+        builder.setTreeConfiguration(0, 0, false, true, false);
+        final String module = Paths.get(yangPath).resolve("ietf-interfaces@2018-02-20.yang").toString();
+        builder.setYangModules(ImmutableList.of(module));
+        final var configuration = builder.build();
+        startLyv(configuration, formatter);
         runTreeTest("interfaces-prefix-module.tree");
     }
 
     @Test
     public void treeLineLengthTest() throws Exception {
         setFormat();
-        this.builder.setTreeConfiguration(0, 20, false, false, false);
-        final String module = Paths.get(this.yangPath).resolve("ietf-interfaces@2018-02-20.yang").toString();
-        runLYV(ImmutableList.of(module), this.builder.build(), this.formatter);
+        builder.setTreeConfiguration(0, 20, false, false, false);
+        final String module = Paths.get(yangPath).resolve("ietf-interfaces@2018-02-20.yang").toString();
+        builder.setYangModules(ImmutableList.of(module));
+        final var configuration = builder.build();
+        startLyv(configuration, formatter);
         runTreeTest("interfaces-line-length.tree");
     }
 
     @Test
     public void treeHelpTest() throws Exception {
         setFormat();
-        this.builder.setTreeConfiguration(0, 0, true, false, false);
-        runLYV(Collections.emptyList(), this.builder.build(), this.formatter);
+        builder.setTreeConfiguration(0, 0, true, false, false);
+        builder.setYangModules(List.of());
+        startLyv(builder.build(), formatter);
         runTreeTest("tree-help");
     }
 
     @Test
     public void treeDepthTest() throws Exception {
         setFormat();
-        this.builder.setTreeConfiguration(3, 0, false, false, false);
-        final String module = Paths.get(this.yangPath).resolve("ietf-interfaces@2018-02-20.yang").toString();
-        runLYV(ImmutableList.of(module), this.builder.build(), this.formatter);
+        builder.setTreeConfiguration(3, 0, false, false, false);
+        final String module = Paths.get(yangPath).resolve("ietf-interfaces@2018-02-20.yang").toString();
+        builder.setYangModules(ImmutableList.of(module));
+        final var configuration = builder.build();
+        startLyv(configuration, formatter);
         runTreeTest("interfaces-limited-depth.tree");
     }
 
@@ -100,11 +108,15 @@ public class TreeTest extends FormatTest {
         runTreeTest("testModel.tree");
     }
 
+    @Override
+    public void runDeviationTest() throws Exception {
+        runTreeTest("module-deviation.tree");
+    }
+
     private void runTreeTest(final String comapreWithFileName) throws Exception {
-        final Path outLog = Paths.get(this.outPath).resolve("out.log");
-        final String fileCreated = FileUtils.readFileToString(outLog.toFile(), "utf-8");
-        final String compareWith = FileUtils.readFileToString(outLog.getParent().resolve("compare")
-                .resolve(comapreWithFileName).toFile(), "utf-8");
+        final Path outLog = Paths.get(outPath).resolve("out.log");
+        final String fileCreated = Files.readString(outLog);
+        final String compareWith = Files.readString(outLog.resolveSibling("compare").resolve(comapreWithFileName));
         Assert.assertEquals(fileCreated, compareWith);
     }
 
